2006-09-16  Akira TAGOH  <at@gclab.org>

	* donrails/tool/donrails-setup.rb: fixed a typo.

	* donrails/app/helpers/application_helper.rb (ApplicationHelper::display_article_images):
	makes an anchor to allow people to show the full-sized image.

2006-09-15  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/article_sweeper.rb (ArticleSweeper::expire_for): Fix from expire_for(record.articles.first) to expire_for(record.article).

	* donrails/app/controllers/login_controller.rb (LoginController::fix_article): Fix for wrong input.
	(LoginController::delete_comment): Fix for non-existing comment.

2006-09-15  Akira TAGOH  <at@gclab.org>

	* donrails/lib/antispam.rb (AntiSpam::scan_text): fixed a typo.

	* donrails/app/models/comment.rb (Comment::notify_by_mail): don't send
	a notice mail if ADMIN_MAILADD isn't set properly.

	* donrails/tool/td2db.rb: new file to import tDiary format files into
	donrails.

2006-09-14  Akira TAGOH  <at@gclab.org>

	* donrails/tool/table-postgresql.txt: updated.

	* Makefile (linkinit): fix a copy fails.

2006-09-14  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/login_controller.rb (LoginController::fix_article): Change: When no entity has changed, does not generate new article.

2006-09-13  Akira TAGOH  <at@gclab.org>

	* upgrade_1_3.postgres.sql: an upgrade sql file for PostgreSQL.

	* donrails/tool/tables-postgresql.txt: updated.

2006-09-13  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/shared/linktitle.rhtml: Fix to skip non existance title.

	* donrails/app/controllers/notes_controller.rb (NotesController::recent): Refine SQL statements.

	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest::test_rdf_enrollment): New test.

	* donrails/app/controllers/notes_controller.rb 
	(NotesController::rdf_article): Fix: when inputted wrong id.
	(NotesController::rdf_enrollment): likewise.

	* donrails/app/views/notes/rdf_article.rxml: Fix for display image:item entry.